Fixed the edit page spacing and layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,27 @@ div#footer.navbar.navbar-default.navbar-fixed-bottom {
 		text-decoration: underline;
 	}*/
 
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+    /* float: left; */
+}
+
+div.col-xs-4.well{
+	padding: 15px;
+}
+
+legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-left: 0px;
+    margin-bottom: 23px;
+    font-size: 19.5px;
+    line-height: inherit;
+    color: #212121;
+    border: 0;
+    border-bottom: 1px solid #e5e5e5;
+}
+
 input, textarea {
 	display: block;
 	width: 100%;
